--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-sm text-white transition-all hover:bg-white hover:text-black;
+  @apply rounded-full border border-black bg-black py-1.5 px-5 text-lg font-bold text-white transition-all hover:bg-white hover:text-black;
 }
 
 .head_text {
